--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Rangarajan Balaguru</a><span class="black-text">Information security Manager</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Rangarajan Balaguru</a><span class="black-text">Governance Risk and Compliance Specialist</span>
     </div>
   </nav>
 
