--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Rangarajan Balaguru.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
-              <h5>Achievement-driven Professional targeting Senior-Level assignments in IT,GRC Subject Mater Expert, IT Audit, or Implementation Security Specialist with an organization of high repute</h5>
+              <h5>Proven IT Leader with extensive experience in GRC, IT Audit, and Implementation Security. I'm passionate about helping organizations of high repute achieve their IT security goals.</h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/rangarajan-balaguru-6b722b76/" target="_blank">
