--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Rangarajan Balaguru.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
-              <h5>Proven IT Leader with extensive experience in GRC, IT Audit, and Implementation Security. I'm passionate about helping organizations of high repute achieve their IT security goals.</h5>
+              <h5>Proven IT Leader with extensive experience in GRC, IT Audit, and Implementation Security. I'm passionate about achieving organizations of high repute achieve their IT security goals.</h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/rangarajan-balaguru-6b722b76/" target="_blank">
@@ -157,7 +157,7 @@
       <div class="container flow-text">
         <blockquote>
           <h2>
-            A GRC Subject Matter Expert with a passion for ITIL, ISO 27001, BCM
+            Seasoned GRC Expert (15+ years) with a passion for ITIL, ISO 27001, and BCM. I leverage my deep knowledge to help organizations streamline processes, enhance security, and achieve compliance goals
           </h2>
         </blockquote>        
         <p>
