--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           </h2>
         </blockquote>        
         <p>
-          I am a MBA (Banking Technology) Graduate Student at Pondicherry University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
-          I have 15+ years of professional work experience which helped me strengthen my experience in GRC Consulting, Internal Audit , etc...
+           With a BSC in Computer Science and an MBA in Banking Technology, as well as 15+ years of IT experience, I thrive in Governance, Risk, and Compliance (GRC) responsibilities. My diversified career includes IT procurement, application management, helpdesk support, IT assurance, and
+           internal auditing, making me a strong asset for organisations looking for a well-rounded GRC practitioner.
         </p>
         <p>
           Looking for an opportunity to work in a challenging position combining my skills in GRC Consulting, which provides professional development, interesting experiences and personal growth.
