--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
            internal auditing, making me a strong asset for organisations looking for a well-rounded GRC practitioner.
         </p>
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in GRC Consulting, which provides professional development, interesting experiences and personal growth.
+          Looking for a challenging role that will allow me to apply my expertise in GRC Consulting while also providing professional development, fascinating experiences, and personal improvement.
         </p>  
       </div>
     </section>
