--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.dbs.com/india/default.page/" target="_blank"
-                      class="teal-text hoverline">Lakshmi Vilas Bank</a></span>
+                      class="teal-text hoverline">Lakshmi Vilas Bank(DBS Inida) </a></span>
                 </p>
               </div>
             </div>
